--- a/src/components/Header/HeaderMiddle.module.css
+++ b/src/components/Header/HeaderMiddle.module.css
@@ -55,21 +55,21 @@
 	gap: 1em;
 }
 .headerMiddle__options_access {
-    display: flex;
-    align-items: end;
+	display: flex;
+	align-items: center;
 	cursor: pointer;
 }
 
 .headerMiddle__options_icons {
 	display: flex;
 	justify-content: space-evenly;
-    align-items: end;
+	align-items: center;
 	font-size: 1.2rem;
 	gap: 0.7em;
-	cursor: pointer;
 }
 .headerMiddle__options_icons_box {
 	position: relative;
+	cursor: pointer;
 }
 .headerMiddle__options_icons_box span {
 	position: absolute;
