--- a/src/index.css
+++ b/src/index.css
@@ -16,5 +16,8 @@ h2 {
 
 	--main-background-color: rgb(112, 160, 31);
 	--text-color: white;
+	--text-color2: rgb(76, 76, 76);
 	--text-color-hover: rgb(203, 198, 198);
+	--border-color: rgb(191, 191, 191);
+	--button-bg-hover: rgb(91, 129, 24);
 }
