--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,7 @@ h2 {
 	--main-background-color: rgb(112, 160, 31);
 	--text-color: white;
 	--text-color2: rgb(76, 76, 76);
+	--text-color3: rgb(0, 0, 0);
 	--text-color-hover: rgb(203, 198, 198);
 	--border-color: rgb(191, 191, 191);
 	--button-bg-hover: rgb(91, 129, 24);
