--- a/src/components/Header/HeaderBottom.module.css
+++ b/src/components/Header/HeaderBottom.module.css
@@ -11,7 +11,10 @@
 .headerBottom_navigation a {
 	text-decoration: none;
 }
-.headerBottom_navigation_menu {
+.headerBottom_navigation_box {
+	position: relative;
+}
+.headerBottom_navigation_box_menu {
 	display: flex;
 	align-items: center;
 	gap: 0.5rem;
@@ -19,6 +22,13 @@
 	color: var(--text-color);
 	background-color: var(--main-background-color);
 }
+.headerBottom_navigation_box_options {
+	position: absolute;
+	background-color: white;
+	width: 100%;
+	padding: 0.5rem;
+}
+
 .headerBottom_navigation_link {
 	padding: 0.5rem;
 	transition: color 0.3s;
