--- a/src/screens/HomePage.module.css
+++ b/src/screens/HomePage.module.css
@@ -1,8 +1,10 @@
 .homepage__photo {
 	width: 100%;
-	height: 30em;
+	
 }
 .homepage__photo img {
 	width: 100%;
 	height: auto;
+	min-height: 12em;
+	object-fit: cover;
 }
