--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 	padding: 0;
 	box-sizing: border-box;
 	font-family: 'Poppins', sans-serif;
-	font-size: 18px;
+	/* font-size: 20px; */
 }
 h2 {
 	margin: 0;
@@ -19,7 +19,7 @@ h2 {
 	--text-color: white;
 	--text-color2: rgb(76, 76, 76);
 	--text-color3: rgb(0, 0, 0);
-	--text-color-hover: rgb(203, 198, 198);
+	--text-color-hover: rgb(102, 102, 102);
 	--border-color: rgb(191, 191, 191);
 	--button-bg-hover: rgb(91, 129, 24);
 	--button-border-hover: rgb(181, 181, 181);
