--- a/src/components/AboutUs/AboutUs.module.css
+++ b/src/components/AboutUs/AboutUs.module.css
@@ -19,12 +19,13 @@
 		margin: 2rem 8em;
 	}
     .aboutUs_box h2 {
-        font-size: 1.5rem;
+        font-size: 1.7rem;
     }
     .aboutUs_box p {
-        font-size: 1rem;
+        font-size: 1.1rem;
+		line-height: 2.2rem;
     }
     .aboutUs_box h3 {
-        font-size: 1.3rem;
+        font-size: 1.5rem;
     }
 }
