--- a/src/components/Header/DesktopMenu.module.css
+++ b/src/components/Header/DesktopMenu.module.css
@@ -30,6 +30,7 @@
 	justify-content: space-between;
 	align-items: center;
 	width: 90%;
+	font-size: 1rem;
 	cursor: pointer;
 }
 
@@ -42,6 +43,7 @@
 	width: 100%;
 	min-height: 20em;
 	padding: 0.7rem 0 0.5rem 0.5rem;
+	font-size: 1rem;
 	background-color: white;
 }
 .desktopMenu__options_option_subcategory_link {
