--- a/src/components/Header/HeaderBottom.module.css
+++ b/src/components/Header/HeaderBottom.module.css
@@ -2,7 +2,7 @@
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
-	margin: 0 4em;
+	margin: 0 3em;
 }
 .headerBottom_navigation {
 	display: flex;
@@ -33,10 +33,12 @@
 	padding: 0.8rem;
 	transition: color 0.3s;
 	color: var(--text-color3);
-
 	cursor: pointer;
 }
 .headerBottom_navigation_link:hover {
+	color: var(--main-background-color);
+}
+.headerBottom_navigation_link_active {
 	color: var(--main-background-color);
 }
 .headerBottom_contact {
