--- a/src/components/Header/DesktopMenu.module.css
+++ b/src/components/Header/DesktopMenu.module.css
@@ -1,5 +1,6 @@
 .desktopMenu {
 	position: relative;
+	z-index: 10;
 }
 .desktopMenu a {
 	text-decoration: none;
@@ -30,7 +31,7 @@
 	justify-content: space-between;
 	align-items: center;
 	width: 90%;
-	font-size: 1rem;
+	font-size: 1.2rem;
 	cursor: pointer;
 }
 
@@ -43,7 +44,7 @@
 	width: 100%;
 	min-height: 20em;
 	padding: 0.7rem 0 0.5rem 0.5rem;
-	font-size: 1rem;
+	font-size: 1.2rem;
 	background-color: white;
 }
 .desktopMenu__options_option_subcategory_link {
