--- a/src/components/ProductPreview/ProductPreview.module.css
+++ b/src/components/ProductPreview/ProductPreview.module.css
@@ -2,17 +2,17 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
-	width: 200px;
-	max-height: 350px;
-	gap: 1em;
+	width: 80%;
+	height: auto;
 }
 .productPreview_img {
 	text-align: center;
-	height: 45%;
+	height: 50%;
+	width: auto;
 }
 .productPreview_img img {
-	width: 6em;
-	height: 6em;
+	width: 100%;
+	height: auto;
 	cursor: pointer;
 }
 .productPreview_img_focus {
@@ -22,12 +22,12 @@
 	position: absolute;
 	display: flex;
 	flex-direction: column;
-	justify-content: center;
+	justify-content: space-around;
 	align-items: center;
-	gap: 1rem;
 	top: 0.5rem;
+	gap: 0.5rem;
 	right: 0.5rem;
-	width: 2.5rem;
+	width: 2.8rem;
 	height: 4.5rem;
 	background-color: white;
 }
@@ -39,7 +39,7 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
-	height: 45%;
+	gap: 0.5em;
 }
 .productPreview_info_name {
 	font-size: 0.9rem;
@@ -86,18 +86,23 @@
 }
 
 @media screen and (min-width: 600px) {
+	.productPreview {
+		width: 200px;
+		height: 350px;
+		gap: 0.5em;
+	}
 	.productPreview_img img {
 		width: 12em;
 		height: 12em;
 	}
 	.productPreview_info_name {
-		font-size: 1.2rem;
+		margin-top: 0.5rem;
+		font-size: 1.1rem;
 	}
 	.productPreview_info_category {
 		font-size: 1rem;
 	}
 	.productPreview_info_price {
-		margin-top: 1rem;
 		font-size: 1.2rem;
 	}
 }
