--- a/src/components/Shop/ProductsView.module.css
+++ b/src/components/Shop/ProductsView.module.css
@@ -1,3 +1,17 @@
-.productsView{
-    
+.productsView {
+	display: flex;
+	justify-content: center;
+	flex-wrap: wrap;
+	gap: 1em;
+	margin-top: 2em;
+}
+
+@media screen and (min-width: 600px) {
+	.productsView {
+		display: flex;
+		justify-content: space-between;
+		flex-wrap: wrap;
+		gap: 2em;
+		margin-top: 3em;
+	}
 }
