--- a/src/components/Shop/ProductsView.module.css
+++ b/src/components/Shop/ProductsView.module.css
@@ -2,7 +2,7 @@
 	display: flex;
 	justify-content: center;
 	flex-wrap: wrap;
-	gap: 1em;
+	gap: 0.5rem;
 	margin-top: 2em;
 }
 
@@ -11,7 +11,6 @@
 		display: flex;
 		justify-content: space-between;
 		flex-wrap: wrap;
-		gap: 2em;
 		margin-top: 3em;
 	}
 }
