--- a/src/components/Cart/Cart.module.css
+++ b/src/components/Cart/Cart.module.css
@@ -19,13 +19,21 @@
 .cart__main_title {
 	display: flex;
 	justify-content: space-between;
+
 	padding: 1rem;
 	border-bottom: 1px solid var(--border-color);
 }
 .cart__main_title_icon {
+	display: flex;
+	align-items: center;
+	cursor: pointer;
+}
+.cart__main_title_icon svg {
 	font-size: 1.8rem;
 	padding: 0.2rem;
-	cursor: pointer;
+}
+.cart__main_title_icon span {
+	font-size: 0.9rem;
 }
 .cart__main_items {
 	height: 80%;
@@ -56,12 +64,14 @@
 }
 .cart__main_bottom_checkcart {
 	padding: 0.5rem;
+	font-size: 1rem;
 	border: none;
 	cursor: pointer;
 }
 .cart__main_bottom_order {
 	padding: 0.5rem 2rem;
 	width: 90%;
+	font-size: 1rem;
 	border: none;
 	border-radius: 5px;
 	color: var(--text-color);
