--- a/src/screens/ContactScreen.module.css
+++ b/src/screens/ContactScreen.module.css
@@ -21,6 +21,9 @@
 	margin: 1rem 0;
 }
 .contactScreen_contact {
+	display: flex;
+	justify-content: space-around;
+	gap: 2rem;
 	margin: 2em 4em;
 }
 .contactScreen_contact_questions {
@@ -28,18 +31,6 @@
 }
 .collapseQuestio_question {
 	border: none;
-	color: red;
-}
-
-
-
-
-
-
-
-
-
-.contactScreen_contact_form {
 }
 
 @media screen and (min-width: 1000px) {
