add aboutus screen

--- a/src/components/ContactScreen/ContactForm.module.css
+++ b/src/components/ContactScreen/ContactForm.module.css
@@ -1,5 +1,5 @@
 .contactForm {
-	width: 45%;
+	width: 100%;
 }
 .contactForm h3 {
 	margin: 0.5rem 0;
@@ -20,6 +20,7 @@
 }
 .contactForm_name {
 	display: flex;
+	flex-direction: column;
 	gap: 1rem;
 }
 .contactForm_agreement {
@@ -47,4 +48,15 @@
 }
 .contactForm span {
 	color: red;
+}
+@media screen and (min-width: 600px) {
+	.contactForm_name {
+		flex-direction: row;
+	}
+}
+
+@media screen and (min-width: 1000px) {
+	.contactForm {
+		width: 45%;
+	}
 }
