--- a/src/screens/ProductScreen.module.css
+++ b/src/screens/ProductScreen.module.css
@@ -1,29 +1,34 @@
 .productScreen {
+	position: relative;
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	padding: 1rem 2rem;
 	width: 100%;
 }
 .productScreen_product {
 	display: flex;
+	flex-direction: column;
 	justify-content: space-evenly;
-    align-items: center;
+	align-items: center;
 	width: 100%;
 	margin-top: 2rem;
 }
 .productScreen_product_info {
-	width: 40%;
+	width: 100%;
 }
 .productScreen_product_info_name {
+	font-size: 1.2rem;
 	text-transform: uppercase;
 }
 .productScreen_product_info_price {
 	margin: 0.5rem 0;
-	font-size: 1.8rem;
+	font-size: 1.2rem;
 	color: var(--main-background-color);
 }
 .productScreen_product_info_path {
 	display: flex;
+	flex-wrap: wrap;
 	gap: 0.3rem;
 	margin-bottom: 1rem;
 }
@@ -54,12 +59,14 @@
 	color: var(--error-text);
 }
 .productScreen_product_info_buy_cart {
+	display: flex;
+	align-items: center;
 	margin: 0.5rem 0;
 }
 .productScreen_product_info_buy_cart_btn {
-	height: 40px;
+	height: 30px;
+	width: 20px;
 	font-size: 1rem;
-	padding: 0.3rem;
 	border: none;
 	border: 1px solid grey;
 	cursor: pointer;
@@ -72,7 +79,7 @@
 }
 .productScreen_product_info_buy_cart input {
 	width: 30px;
-	height: 40px;
+	height: 30px;
 	padding: 0.3rem;
 	font-size: 1rem;
 	text-align: center;
@@ -80,7 +87,6 @@
 	border: 1px solid grey;
 }
 .productScreen_product_info_buy_cart_btnAdd {
-	font-size: 1rem;
 	text-transform: uppercase;
 	margin-left: 1rem;
 	padding: 0.5rem 1rem;
@@ -98,7 +104,6 @@
 	align-items: center;
 	gap: 0.5rem;
 	margin: 1rem 0;
-	font-size: 1.1rem;
 	transition: color 0.4s;
 	cursor: pointer;
 }
@@ -113,4 +118,35 @@
 }
 .productScreen_product_info_buy_others span {
 	color: var(--text-color2);
+}
+@media screen and (min-width: 600px) {
+	.productScreen_product_info_name {
+		font-size: 2rem;
+	}
+	.productScreen_product_info_price {
+		font-size: 1.8rem;
+	}
+	.productScreen_product_info_buy_cart_btn {
+		height: 40px;
+		width: 20px;
+	}
+	.productScreen_product_info_buy_cart input {
+		width: 30px;
+		height: 40px;
+	}
+	.productScreen_product_info_buy_cart_btnAdd {
+		font-size: 1rem;
+	}
+	.productScreen_product_info_buy_like {
+		font-size: 1.1rem;
+	}
+}
+
+@media screen and (min-width: 800px) {
+	.productScreen_product {
+		flex-direction: row;
+	}
+	.productScreen_product_info {
+		width: 40%;
+	}
 }
