--- a/src/components/ContactScreen/ContactForm.module.css
+++ b/src/components/ContactScreen/ContactForm.module.css
@@ -33,14 +33,13 @@
 	margin-top: 1rem;
 	padding: 0.3rem 1rem;
 	border: none;
-	border: 1px solid rgb(178, 176, 176);
-	background: transparent;
+	color: var(--text-color);
+	background-color: var(--main-background-color);
 	cursor: pointer;
 	transition: 0.3s;
 }
 .contactForm button:hover {
-	background: rgb(218, 218, 218);
-	border-color: rgb(165, 165, 165);
+	background-color: var(--button-bg-hover);
 }
 .contactForm p {
 	margin-top: 0.3rem;
