--- a/src/components/Header/MobileMenu.module.css
+++ b/src/components/Header/MobileMenu.module.css
@@ -51,6 +51,7 @@
 	justify-content: center;
 	align-items: center;
 	width: 50%;
+	text-transform: uppercase;
 	background: rgb(235, 235, 235);
 	box-shadow: inset 0px 0px 10px 0px rgb(210, 210, 211);
 	cursor: pointer;
@@ -78,13 +79,13 @@
 .mobileMenu__main_options_title_icon {
 	margin-right: 0.5rem;
 }
-.mobileMenu__main_options_title h3 {
+.mobileMenu__main_options_title a {
 	display: flex;
 	align-items: center;
 	text-transform: uppercase;
 	font-weight: normal;
 	width: 85%;
-	font-size: 1rem;
+	font-size: 1.2rem;
 	padding-left: 0.8rem;
 	padding: 0.5rem;
 	cursor: pointer;
@@ -112,7 +113,7 @@
 .mobileMenu__main_options_category {
 	text-decoration: none;
 	color: var(--text-color2);
-	font-size: 0.9rem;
+	font-size: 1rem;
 	padding: 0.7rem;
 	padding-left: 1.3rem;
 	border-bottom: 1px solid var(--border-color);
