--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,4 +1,6 @@
 .footer {
+	position: relative;
+	bottom: 40px;
 	display: flex;
 	justify-content: space-between;
 	flex-direction: column;
@@ -57,6 +59,7 @@
 		justify-content: space-between;
 		padding: 1.5em 6em;
 		flex-direction: row;
+		bottom: 0;
 	}
 	.footer p {
 		font-size: 1.2rem;
