--- a/src/index.css
+++ b/src/index.css
@@ -45,6 +45,7 @@ h2 {
 }
 .carousel .thumbs-wrapper {
 	overflow-x: scroll;
+	margin: 0.5rem 0;
 }
 .carousel img {
 	object-fit: scale-down !important;
@@ -59,4 +60,3 @@ h2 {
 	width: 100%;
 	height: 100%;
 }
-
