--- a/src/components/ShopScreen/ProductsView.module.css
+++ b/src/components/ShopScreen/ProductsView.module.css
@@ -5,6 +5,13 @@
 	gap: 0.5rem;
 	margin-top: 2em;
 }
+.productsView_error {
+	text-align: center;
+	margin-top: 4em;
+	font-size: 1.2rem;
+	text-transform: uppercase;
+	color: var(--error-text);
+}
 
 @media screen and (min-width: 600px) {
 	.productsView {
