--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -33,8 +33,8 @@
 }
 .footer_box span,
 .footer_box a {
-	font-size: 0.9rem;
-	padding-bottom: 0.5rem;
+	font-size: 1rem;
+	margin-bottom: 0.5rem;
 	margin-left: 0.3rem;
 	color: var(--text-color2);
 	text-decoration: none;
